core/codegen/tests/ui-fail-stable/from_form.stderr
error: enums are not supported
 --> $DIR/from_form.rs:4:1
  |
4 | enum Thing { }
  | ^^^^

error: [note] error occurred while deriving `FromForm`
 --> $DIR/from_form.rs:3:10
  |
3 | #[derive(FromForm)]
  |          ^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
 --> $DIR/from_form.rs:7:1
  |
7 | struct Foo1;
  | ^^^^^^

error: [note] error occurred while deriving `FromForm`
 --> $DIR/from_form.rs:6:10
  |
6 | #[derive(FromForm)]
  |          ^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: at least one field is required
  --> $DIR/from_form.rs:10:13
   |
10 | struct Foo2 {  }
   |             ^^^^

error: [note] error occurred while deriving `FromForm`
 --> $DIR/from_form.rs:9:10
  |
9 | #[derive(FromForm)]
  |          ^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
  --> $DIR/from_form.rs:13:1
   |
13 | struct Foo3(usize);
   | ^^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:12:10
   |
12 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one lifetime is supported
  --> $DIR/from_form.rs:16:25
   |
16 | struct NextTodoTask<'f, 'a> {
   |                         ^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:15:10
   |
15 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --- help: field name cannot be `isindex` or contain '&', '=', '?', '.', '[', ']'
  --> $DIR/from_form.rs:25:20
   |
25 |     #[field(name = "isindex")]
   |                    ^^^^^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:23:10
   |
23 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate form field
  --> $DIR/from_form.rs:33:5
   |
33 |     foo: usize,
   |     ^^^

error: [note] previously defined here
  --> $DIR/from_form.rs:31:5
   |
31 |     #[field(name = "foo")]
   |     ^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:29:10
   |
29 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate form field
  --> $DIR/from_form.rs:40:5
   |
40 |     #[field(name = "hello")]
   |     ^

error: [note] previously defined here
  --> $DIR/from_form.rs:38:5
   |
38 |     #[field(name = "hello")]
   |     ^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:36:10
   |
36 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate form field
  --> $DIR/from_form.rs:47:5
   |
47 |     #[field(name = "first")]
   |     ^

error: [note] previously defined here
  --> $DIR/from_form.rs:46:5
   |
46 |     first: String,
   |     ^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:44:10
   |
44 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected attribute parameter: `field`
  --> $DIR/from_form.rs:53:28
   |
53 |     #[field(name = "blah", field = "bloo")]
   |                            ^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:51:10
   |
51 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected list `#[field(..)]`, found bare path "field"
  --> $DIR/from_form.rs:59:7
   |
59 |     #[field]
   |       ^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:57:10
   |
57 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected key/value `key = value`
  --> $DIR/from_form.rs:65:13
   |
65 |     #[field("blah")]
   |             ^^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:63:10
   |
63 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected key/value `key = value`
  --> $DIR/from_form.rs:71:13
   |
71 |     #[field(123)]
   |             ^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:69:10
   |
69 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected attribute parameter: `beep`
  --> $DIR/from_form.rs:77:13
   |
77 |     #[field(beep = "bop")]
   |             ^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:75:10
   |
75 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate form field renaming
  --- help: a field can only be renamed once
  --> $DIR/from_form.rs:84:20
   |
84 |     #[field(name = "blah")]
   |                    ^^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:81:10
   |
81 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/from_form.rs:90:20
   |
90 |     #[field(name = true)]
   |                    ^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:88:10
   |
88 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal, found bare path "name"
  --> $DIR/from_form.rs:96:13
   |
96 |     #[field(name)]
   |             ^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:94:10
   |
94 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
   --> $DIR/from_form.rs:102:20
    |
102 |     #[field(name = 123)]
    |                    ^^^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:100:10
    |
100 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --- help: field name cannot be `isindex` or contain '&', '=', '?', '.', '[', ']'
   --> $DIR/from_form.rs:108:20
    |
108 |     #[field(name = "hello&world")]
    |                    ^^^^^^^^^^^^^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:106:10
    |
106 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --- help: field name cannot be `isindex` or contain '&', '=', '?', '.', '[', ']'
   --> $DIR/from_form.rs:114:20
    |
114 |     #[field(name = "!@#$%^&*()_")]
    |                    ^^^^^^^^^^^^^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:112:10
    |
112 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --- help: field name cannot be `isindex` or contain '&', '=', '?', '.', '[', ']'
   --> $DIR/from_form.rs:120:20
    |
120 |     #[field(name = "?")]
    |                    ^^^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:118:10
    |
118 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --- help: field name cannot be `isindex` or contain '&', '=', '?', '.', '[', ']'
   --> $DIR/from_form.rs:126:20
    |
126 |     #[field(name = "")]
    |                    ^^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:124:10
    |
124 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --- help: field name cannot be `isindex` or contain '&', '=', '?', '.', '[', ']'
   --> $DIR/from_form.rs:132:20
    |
132 |     #[field(name = "a&b")]
    |                    ^^^^^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:130:10
    |
130 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --- help: field name cannot be `isindex` or contain '&', '=', '?', '.', '[', ']'
   --> $DIR/from_form.rs:138:20
    |
138 |     #[field(name = "a=")]
    |                    ^^^^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:136:10
    |
136 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `unknown` in this scope
   --> $DIR/from_form.rs:150:24
    |
150 |     #[field(validate = unknown())]
    |                        ^^^^^^^ not found in this scope

error[E0308]: mismatched types
   --> $DIR/from_form.rs:144:24
    |
144 |     #[field(validate = 123)]
    |             --------   ^^^ expected enum `std::result::Result`, found integer
    |             |
    |             expected due to this
    |
    = note: expected enum `std::result::Result<(), Errors<'_>>`
               found type `{integer}`

error[E0308]: mismatched types
   --> $DIR/from_form.rs:157:12
    |
157 |     first: String,
    |            ^^^^^^ expected enum `TempFile`, found struct `std::string::String`
    |
    = note: expected reference `&TempFile<'_>`
               found reference `&std::string::String`

error[E0308]: mismatched types
   --> $DIR/from_form.rs:163:12
    |
163 |     first: String,
    |            ^^^^^^ expected enum `TempFile`, found struct `std::string::String`
    |
    = note: expected reference `&TempFile<'_>`
               found reference `&std::string::String`

error[E0308]: mismatched types
   --> $DIR/from_form.rs:162:28
    |
162 |     #[field(validate = ext("hello"))]
    |                            ^^^^^^^ expected struct `ContentType`, found `&str`
